--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "lucide-react": "^0.471.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
