--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
+    "canvas-confetti": "^1.9.3",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.3",
     "firebase": "^11.1.0",
@@ -24,6 +25,7 @@
     "lucide-react": "^0.471.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3"
   },
